--- a/index.html
+++ b/index.html
@@ -1,1 +1,206 @@
-Prueba
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>Sueldo Vigilador</title>
+
+  <!-- Android barras oscuras -->
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#161821" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#161821" media="(prefers-color-scheme: dark)">
+
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div id="app">
+    <!-- MODAL de modo de cálculo -->
+    <div class="modal show" id="modal-modo">
+      <div class="modal-card">
+        <div class="brand">
+          <img src="https://raw.githubusercontent.com/primer/octicons/main/icons/shield-24.svg" alt="" />
+          <h1>Sueldo <span>Vigilador</span></h1>
+        </div>
+        <p class="lead">¿Cómo querés calcular tu sueldo?</p>
+        <p class="sub">Elegí la modalidad que usás para calcularlo de forma más precisa.</p>
+        <div class="btn-col">
+          <button id="btn-modo-dias" class="btn btn-brand">Por días trabajados</button>
+          <button id="btn-modo-horas" class="btn btn-accent">Por horas trabajadas</button>
+          <button id="btn-acerca" class="btn btn-ghost">Acerca de la App</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- CABECERA -->
+    <header class="header">
+      <div class="brand">
+        <img src="https://raw.githubusercontent.com/primer/octicons/main/icons/shield-24.svg" alt="" />
+        <h1>Sueldo <span>Vigilador</span></h1>
+      </div>
+      <button id="btn-nuevo" class="chip">Nuevo cálculo</button>
+    </header>
+
+    <!-- FORMULARIOS -->
+    <main class="content">
+      <!-- MODO DÍAS -->
+      <section id="form-dias" class="card hide">
+        <div class="grid">
+          <label class="field">
+            <span>Días trabajados</span>
+            <input id="diasTrabajados" type="number" min="0" inputmode="numeric" placeholder="Ej. 21" />
+          </label>
+
+          <label class="field">
+            <span>▼ Horas por día</span>
+            <select id="horasPorDia">
+              <option value="12">12 horas</option>
+              <option value="10">10 horas</option>
+              <option value="8">8 horas</option>
+            </select>
+          </label>
+
+          <label class="field">
+            <span>Días feriados</span>
+            <input id="diasFeriados" type="number" min="0" inputmode="numeric" placeholder="Ej. 1" />
+          </label>
+
+          <label class="field">
+            <span>▼ Pago feriado</span>
+            <select id="pagoFeriado">
+              <option value="0">4h al 100% + 8h normal (12h)</option>
+              <option value="1">12h al 100% (12h)</option>
+              <option value="2">Jornada completa al 100% (8/10h)</option>
+            </select>
+          </label>
+
+          <label class="field">
+            <span>Años de antigüedad</span>
+            <input id="aniosAnt" type="number" min="0" inputmode="numeric" placeholder="Ej. 1" />
+          </label>
+
+          <div class="checks">
+            <label class="check">
+              <input id="turnoNocheDias" type="checkbox" />
+              <span>Turno noche</span>
+            </label>
+            <label class="check">
+              <input id="sindicatoDias" type="checkbox" />
+              <span>Sindicato</span>
+            </label>
+          </div>
+
+          <label id="diasNocturnosWrap" class="field hide">
+            <span>Días nocturnos</span>
+            <input id="diasNocturnosDias" type="number" min="0" inputmode="numeric" placeholder="Igual a días trabajados" />
+          </label>
+        </div>
+
+        <div class="cta">
+          <button id="btn-calcular-dias" class="btn btn-brand">Calcular sueldo</button>
+          <button id="btn-opciones" class="btn btn-accent">Opciones avanzadas</button>
+        </div>
+
+        <div id="resultado-dias" class="resultado hide">
+          <div class="neto" id="neto-dias"></div>
+          <div class="bruto" id="bruto-dias"></div>
+          <div class="alt" id="alt-dias"></div>
+          <button id="btn-detalle-dias" class="btn btn-ghost">Ver detalle completo</button>
+        </div>
+      </section>
+
+      <!-- MODO HORAS -->
+      <section id="form-horas" class="card hide">
+        <div class="grid">
+          <label class="field">
+            <span>Horas totales del mes</span>
+            <input id="horasTotales" type="number" min="0" inputmode="numeric" placeholder="Ej. 240" />
+          </label>
+
+          <label class="field">
+            <span>Días feriados</span>
+            <input id="diasFeriadosHoras" type="number" min="0" inputmode="numeric" placeholder="Ej. 1" />
+          </label>
+
+          <label class="field">
+            <span>Días nocturnos</span>
+            <input id="diasNocturnos" type="number" min="0" inputmode="numeric" placeholder="Ej. 20" />
+          </label>
+
+          <label class="field">
+            <span>Años de antigüedad</span>
+            <input id="aniosAntHoras" type="number" min="0" inputmode="numeric" placeholder="Ej. 1" />
+          </label>
+
+          <div class="checks">
+            <label class="check">
+              <input id="sindicatoHoras" type="checkbox" />
+              <span>Sindicato</span>
+            </label>
+          </div>
+        </div>
+
+        <div class="cta">
+          <button id="btn-calcular-horas" class="btn btn-brand">Calcular sueldo</button>
+          <button id="btn-opciones-2" class="btn btn-accent">Opciones avanzadas</button>
+        </div>
+
+        <div id="resultado-horas" class="resultado hide">
+          <div class="neto" id="neto-horas"></div>
+          <div class="bruto" id="bruto-horas"></div>
+          <button id="btn-detalle-horas" class="btn btn-ghost">Ver detalle completo</button>
+        </div>
+      </section>
+    </main>
+
+    <!-- MODAL Detalle -->
+    <div class="modal" id="modal-detalle">
+      <div class="modal-card lg">
+        <pre id="detalle-pre" class="detalle"></pre>
+        <div class="modal-actions">
+          <button id="btn-cerrar-detalle" class="btn btn-ghost">Cerrar</button>
+          <button id="btn-copiar" class="btn btn-accent">Copiar</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL Opciones avanzadas -->
+    <div class="modal" id="modal-opciones">
+      <div class="modal-card">
+        <h2>Opciones avanzadas</h2>
+        <div class="grid">
+          <label class="field">
+            <span>Horas extras desde</span>
+            <select id="horasExtrasDesde">
+              <option value="192">192</option>
+              <option value="200">200</option>
+              <option value="208" selected>208</option>
+            </select>
+          </label>
+
+          <label class="field"><span>Hora normal</span><input id="vHora" type="number" step="0.01"></label>
+          <label class="field"><span>Hora extra 50%</span><input id="vHora50" type="number" step="0.01"></label>
+          <label class="field"><span>Hora extra 100%</span><input id="vHora100" type="number" step="0.01"></label>
+          <label class="field"><span>Hora nocturna (adicional)</span><input id="vHoraNoc" type="number" step="0.01"></label>
+          <label class="field"><span>Plus adicional</span><input id="plusAdi" type="number" step="0.01"></label>
+          <label class="field"><span>Plus no remunerativo</span><input id="plusNR" type="number" step="0.01"></label>
+          <label class="field"><span>Horas extra por jornada</span><input id="extraJornada" type="number" step="1"></label>
+          <label class="field"><span>Sueldo básico</span><input id="sBasico" type="number" step="0.01"></label>
+          <label class="field"><span>Presentismo</span><input id="presentismo" type="number" step="0.01"></label>
+          <label class="field"><span>Viáticos</span><input id="viaticos" type="number" step="0.01"></label>
+          <label class="field"><span>Horas nocturnas x día</span><input id="horasNocXD" type="number" step="1"></label>
+        </div>
+        <div class="modal-actions">
+          <button id="btn-reset" class="btn btn-ghost">Restablecer</button>
+          <div class="spacer"></div>
+          <button id="btn-cancelar-opc" class="btn">Cancelar</button>
+          <button id="btn-guardar-opc" class="btn btn-brand">Guardar</button>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer-text">Desarrollado por Sebastián Sanavera ® — Powered Archive.org</footer>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
