--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
     </div>
 
-    <footer class="footer-text">Desarrollado por Sebastián Sanavera ® — Powered Archive.org</footer>
+    <footer class="footer-text">Desarrollado por Sebastián Sanavera ®</footer>
   </div>
 
   <script src="app.js"></script>
