--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="modal show" id="modal-modo">
       <div class="modal-card">
         <div class="brand">
-          <img src="https://raw.githubusercontent.com/primer/octicons/main/icons/shield-24.svg" alt="" />
+          <img src="https://raw.githubusercontent.com/sanavera/sueldo-vigilador-web/refs/heads/main/ic_launcher.png" alt="" />
           <h1>Sueldo <span>Vigilador</span></h1>
         </div>
         <p class="lead">¿Cómo querés calcular tu sueldo?</p>
@@ -34,7 +34,7 @@
     <!-- CABECERA -->
     <header class="header">
       <div class="brand">
-        <img src="https://raw.githubusercontent.com/primer/octicons/main/icons/shield-24.svg" alt="" />
+        <img src="https://raw.githubusercontent.com/sanavera/sueldo-vigilador-web/refs/heads/main/ic_launcher.png" alt="" />
         <h1>Sueldo <span>Vigilador</span></h1>
       </div>
       <button id="btn-nuevo" class="chip">Nuevo cálculo</button>
