--- a/index.html
+++ b/index.html
@@ -167,21 +167,15 @@
     <div class="modal" id="modal-opciones">
       <div class="modal-card">
         <h2>Opciones avanzadas</h2>
-
-        <!-- Selector de escala salarial (JUL/AGO/SEP 2025) -->
-        <div class="grid" style="margin-bottom:6px">
+        <div class="grid">
+          <!-- Spinner de Escala salarial (SOLO UNO) -->
           <label class="field">
             <span>▼ Escala salarial</span>
-            <select id="scaleSelect">
-              <option value="2025-07">Julio 2025</option>
-              <option value="2025-08" selected>Agosto 2025</option>
-              <option value="2025-09">Septiembre 2025</option>
-            </select>
+            <select id="escalaMes"></select>
           </label>
-        </div>
 
-        <div class="grid">
-          <label class="field"><span>Horas extras desde</span>
+          <label class="field">
+            <span>Horas extras desde</span>
             <select id="horasExtrasDesde">
               <option value="192">192</option>
               <option value="200">200</option>
@@ -201,17 +195,12 @@
           <label class="field"><span>Viáticos</span><input id="viaticos" type="number" step="0.01"></label>
           <label class="field"><span>Horas nocturnas x día</span><input id="horasNocXD" type="number" step="1"></label>
         </div>
-
         <div class="modal-actions">
           <button id="btn-reset" class="btn btn-ghost">Restablecer</button>
           <div class="spacer"></div>
           <button id="btn-cancelar-opc" class="btn">Cancelar</button>
           <button id="btn-guardar-opc" class="btn btn-brand">Guardar</button>
         </div>
-
-        <p class="sub" style="margin-top:8px">
-          Fuentes: UPSRA / La Voz del Vigilador / acuerdos sectoriales. (Esta app solo calcula; los valores pueden actualizarse).
-        </p>
       </div>
     </div>
 
